CI/CD has been valideted, new anomaly Labels added
