# api_contract/openapi.json
@@ -1,6 +1,39 @@
 {
   "components": {
     "schemas": {
+      "AnomalyResponse": {
+        "properties": {
+          "embedding_id": {
+            "title": "Embedding Id",
+            "type": "string"
+          },
+          "scores": {
+            "$ref": "#/components/schemas/AnomalyScores"
+          }
+        },
+        "required": [
+          "embedding_id",
+          "scores"
+        ],
+        "title": "AnomalyResponse",
+        "type": "object"
+      },
+      "AnomalyScores": {
+        "properties": {
+          "isolation_forest": {
+            "$ref": "#/components/schemas/DetectorScore"
+          },
+          "local_outlier_factor": {
+            "$ref": "#/components/schemas/DetectorScore"
+          }
+        },
+        "required": [
+          "isolation_forest",
+          "local_outlier_factor"
+        ],
+        "title": "AnomalyScores",
+        "type": "object"
+      },
       "CategoryListItem": {
         "properties": {
           "id": {
@@ -73,6 +106,19 @@
           "filename"
         ],
         "title": "DataOverview",
+        "type": "object"
+      },
+      "DetectorScore": {
+        "properties": {
+          "anomaly_score": {
+            "title": "Anomaly Score",
+            "type": "number"
+          }
+        },
+        "required": [
+          "anomaly_score"
+        ],
+        "title": "DetectorScore",
         "type": "object"
       },
       "HTTPValidationError": {
@@ -160,6 +206,48 @@
   },
   "openapi": "3.1.0",
   "paths": {
+    "/api/v1/anomaly/{embedding_index}": {
+      "get": {
+        "operationId": "get_anomaly_score_api_v1_anomaly__embedding_index__get",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "embedding_index",
+            "required": true,
+            "schema": {
+              "title": "Embedding Index",
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AnomalyResponse"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Get Anomaly Score",
+        "tags": [
+          "anomaly"
+        ]
+      }
+    },
     "/api/v1/sounds/categories": {
       "get": {
         "operationId": "get_category_list_api_v1_sounds_categories_get",
